--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/Andrew0502/Postive-Thoughts/issues"
   },
-  "homepage": "https://github.com/Andrew0502/Postive-Thoughts#readme"
+  "homepage": "https://github.com/Andrew0502/Postive-Thoughts#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.10.12",
+    "path": "^0.12.7"
+  }
 }
