--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/Andrew0502/Positive-Thoughts#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
