--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.11",
+    "node-sass": "^5.0.0",
     "path": "^0.12.7",
     "react-router-dom": "^5.2.0",
     "twilio": "^3.51.0"
