--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "twilio": "^3.51.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6"
   }
 }
